--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -4,5 +4,15 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "Kestrel": {
+    "EndPoints": {
+      "Http": {
+        "Url": "http://+:3001"
+      },
+      "Https": {
+        "Url": "https://+:3000"
+      }
+    }
   }
 }
