--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  //"Kestrel": {
+  //  "Certificates": {
+  //    "Default": {
+  //      "Path": "../https/Dev.pfx",
+  //      "Password": "1234"
+  //    }
+  //  }
+  //}
 }
