--- a/appsettings.json
+++ b/appsettings.json
@@ -6,12 +6,20 @@
     }
   },
   "AllowedHosts": "*",
-  //"Kestrel": {
-  //  "Certificates": {
-  //    "Default": {
-  //      "Path": "../https/Dev.pfx",
-  //      "Password": "1234"
-  //    }
-  //  }
-  //}
+  "Kestrel": {
+    //"Certificates": {
+    //  "Default": {
+    //    "Path": "../https/Dev.pfx",
+    //    "Password": "1234"
+    //  }
+    //},
+    "EndPoints": {
+      "Http": {
+        "Url": "http://+:3001"
+      }
+      //"Https": {
+      //  "Url": "https://+:3000"
+      //}
+    }
+  }
 }
