Increase config request time to 2 min

--- a/appsettings.json
+++ b/appsettings.json
@@ -9,7 +9,7 @@
   "Kestrel": {
     //"Certificates": {
     //  "Default": {
-    //    "Path": "../https/Dev.pfx",
+    //    "Path": "../https/ServiceRegistry.pfx",
     //    "Password": "1234"
     //  }
     //},
