--- a/.github/workflows/main_dpma-service-registry-1.yml
+++ b/.github/workflows/main_dpma-service-registry-1.yml
@@ -23,14 +23,14 @@ jobs:
       uses: docker/login-action@v2
       with:
         registry: https://mcr.microsoft.com/
-        username: ${{ secrets.AzureAppService_ContainerUsername_fd8dcd68891144bcb3ae2e8b8050bb02 }}
-        password: ${{ secrets.AzureAppService_ContainerPassword_b5607ebab6444de0aec6783ac04b3594 }}
+        username: ${{ secrets.AzureAppService_ContainerUsername_4295ab52979745cfa2c0fbfe5ef69e53 }}
+        password: ${{ secrets.AzureAppService_ContainerPassword_7fe584e3b908425d900505d505122a0f }}
 
     - name: Build and push container image to registry
       uses: docker/build-push-action@v3
       with:
         push: true
-        tags: mcr.microsoft.com/${{ secrets.AzureAppService_ContainerUsername_fd8dcd68891144bcb3ae2e8b8050bb02 }}/appsvc/staticsite:${{ github.sha }}
+        tags: mcr.microsoft.com/${{ secrets.AzureAppService_ContainerUsername_4295ab52979745cfa2c0fbfe5ef69e53 }}/dotnet/aspnet:${{ github.sha }}
         file: ./Dockerfile
 
   deploy:
@@ -47,5 +47,5 @@ jobs:
       with:
         app-name: 'dpma-service-registry-1'
         slot-name: 'production'
-        publish-profile: ${{ secrets.AzureAppService_PublishProfile_aab187e14afa4c538a60aa38b75375ea }}
-        images: 'mcr.microsoft.com/${{ secrets.AzureAppService_ContainerUsername_fd8dcd68891144bcb3ae2e8b8050bb02 }}/appsvc/staticsite:${{ github.sha }}'
+        publish-profile: ${{ secrets.AzureAppService_PublishProfile_63c3b57682204b0c8499e086b3150dc3 }}
+        images: 'mcr.microsoft.com/${{ secrets.AzureAppService_ContainerUsername_4295ab52979745cfa2c0fbfe5ef69e53 }}/dotnet/aspnet:${{ github.sha }}'
